--- a/win32/Visual Studio/VS2010/libdaaladec/libdaladec.vcxproj.filters
+++ b/win32/Visual Studio/VS2010/libdaaladec/libdaladec.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\src\block_size_dec.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\decode.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -33,6 +30,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\decint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\quantizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
