--- a/win32/Visual Studio/VS2010/libdaalaenc/libdaalaenc.vcxproj.filters
+++ b/win32/Visual Studio/VS2010/libdaalaenc/libdaalaenc.vcxproj.filters
@@ -15,12 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\src\block_size_dec.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\..\src\block_size_enc.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\..\src\encode.c">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,6 +36,9 @@
     <ClCompile Include="..\..\..\..\src\pvq_encoder.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\src\block_size_enc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\include\daala\daalaenc.h">
@@ -51,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\src\entenc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\src\quantizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
