Add tool to compute the Haar DC quantization constants.

--- a/Makefile.am
+++ b/Makefile.am
@@ -199,6 +199,7 @@ tools_TARGETS = \
 	tools/trans_gain \
 	tools/gen_cdf \
 	tools/compute_basis \
+	tools/compute_haar_basis \
 	tools/gen_laplace_tables \
 	tools/daalainfo \
 	tools/dump_ssim \
@@ -400,6 +401,15 @@ tools_compute_basis_SOURCES = \
 	src/internal.c
 tools_compute_basis_CFLAGS = $(OGG_CFLAGS)
 tools_compute_basis_LDADD = $(OGG_LIBS) $(LIBM)
+
+# compute_haar_basis
+tools_compute_haar_basis_SOURCES = \
+	tools/compute_haar_basis.c \
+	src/dct.c \
+	src/filter.c \
+	src/internal.c
+tools_compute_haar_basis_CFLAGS = $(OGG_CFLAGS)
+tools_compute_haar_basis_LDADD = $(OGG_LIBS) $(LIBM)
 
 # gen_laplace_tables
 tools_gen_laplace_tables_SOURCES = \
