--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -247,6 +247,22 @@ CBASIS_OBJS:=${CBASIS_OBJS:%.c=${WORKDIR}/%.o}
 CBASIS_CSOURCES:=${CBASIS_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} ${CBASIS_LIB_CSOURCES:%=${LIBSRCDIR}/%}
 CBASIS_TARGET:=compute_basis
 
+#compute_haar_basis
+CHBASIS_LOCAL_CSOURCES = \
+compute_haar_basis.c
+
+CHBASIS_LIB_CSOURCES = \
+dct.c \
+filter.c \
+internal.c
+
+CHBASIS_LDFLAGS = `pkg-config ogg libpng --libs` -lm
+
+CHBASIS_OBJS:=${CHBASIS_LOCAL_CSOURCES} ${CHBASIS_LIB_CSOURCES}
+CHBASIS_OBJS:=${CHBASIS_OBJS:%.c=${WORKDIR}/%.o}
+CHBASIS_CSOURCES:=${CHBASIS_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} ${CHBASIS_LIB_CSOURCES:%=${LIBSRCDIR}/%}
+CHBASIS_TARGET:=compute_haar_basis
+
 #trans2d
 T2D_LOCAL_CSOURCES = \
 trans2d.c \
@@ -368,8 +384,9 @@ DZZ_TARGET:=draw_zigzags
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNR_OBJS} ${PSNRHVS_OBJS} \
  ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${T_OBJS} \
- ${TG_OBJS} ${CBASIS_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} ${BD_OBJS} \
- ${YJ_OBJS} ${JY_OBJS} ${DZZ_OBJS} ${MONO_OBJS} ${DS_OBJS} ${US_OBJS}
+ ${TG_OBJS} ${CBASIS_OBJS} ${CHBASIS_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} \
+ ${BD_OBJS} ${YJ_OBJS} ${JY_OBJS} ${DZZ_OBJS} ${MONO_OBJS} ${DS_OBJS} \
+ ${US_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
@@ -377,9 +394,9 @@ ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNR_TARGET} ${PSNRHVS_TARGET} \
  ${GEN_CDF_TARGET} ${GEN_LAPLACE_TABLES_TARGET} ${T_TARGET} \
- ${TG_TARGET} ${CBASIS_TARGET} ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET} \
- ${YJ_TARGET} ${JY_TARGET} ${DZZ_TARGET} ${MONO_TARGET} ${DS_TARGET} \
- ${US_TARGET}
+ ${TG_TARGET} ${CBASIS_TARGET} ${CHBASIS_TARGET} ${T2D_TARGET} \
+ ${BSIZE_TARGET} ${BD_TARGET} ${YJ_TARGET} ${JY_TARGET} ${DZZ_TARGET} \
+ ${MONO_TARGET} ${DS_TARGET} ${US_TARGET}
 
 all: ${ALL_TARGETS}
 
@@ -415,6 +432,9 @@ ${TG_TARGET}: ${TG_OBJS}
 
 ${CBASIS_TARGET}: ${CBASIS_OBJS}
 	${CC} ${CFLAGS} ${CBASIS_OBJS} ${CBASIS_LDFLAGS} -o $@
+
+${CHBASIS_TARGET}: ${CHBASIS_OBJS}
+	${CC} ${CFLAGS} ${CHBASIS_OBJS} ${CHBASIS_LDFLAGS} -o $@
 
 ${T2D_TARGET}: ${T2D_OBJS}
 	${CC} ${CFLAGS} ${T2D_OBJS} ${T2D_LDFLAGS} -o $@
