--- a/unix/Makefile
+++ b/unix/Makefile
@@ -140,6 +140,7 @@ quantizer.c \
 state.c \
 switch_table.c \
 tf.c \
+util.c \
 zigzag4.c \
 zigzag8.c \
 zigzag16.c \
@@ -148,6 +149,7 @@ zigzag64.c \
 $(if $(findstring -DOD_X86ASM,${CFLAGS}), \
 x86/cpu.c \
 x86/sse2mc.c \
+x86/sse2util.c \
 x86/x86state.c \
 ) \
 $(if $(findstring -DOD_LOGGING_ENABLED,${CFLAGS}), \
