--- a/daaladec.pc.in
+++ b/daaladec.pc.in
@@ -6,8 +6,8 @@ includedir=@includedir@
 Name: daaladec
 Description: Daala decoding library
 Version: @PACKAGE_VERSION@
-Requires.private: ogg >= 1.3 @PC_PNG_REQUIRES@
+Requires.private: @PC_PNG_REQUIRES@
 Conflicts:
 Libs: -L${libdir} -ldaaladec
-Libs.private: -ldaalabase @OGG_LIBS@ @PC_PNG_LIBS@ @LIBM@
+Libs.private: -ldaalabase @PC_PNG_LIBS@ @LIBM@
 Cflags: -I${includedir}/daala
