--- a/daalaenc-uninstalled.pc.in
+++ b/daalaenc-uninstalled.pc.in
@@ -6,7 +6,7 @@ includedir=${pcfiledir}/@top_srcdir@/include
 Name: daalaenc uninstalled
 Description: Daala encoding library (not installed)
 Version: @PACKAGE_VERSION@
-Requires.private: ogg >= 1.3 @PC_PNG_REQUIRES@
+Requires.private: @PC_PNG_REQUIRES@
 Conflicts:
-Libs: ${libdir}/libdaalaenc.la ${libdir}/libdaalabase.la @OGG_LIBS@ @PC_PNG_LIBS@ @LIBM@
+Libs: ${libdir}/libdaalaenc.la ${libdir}/libdaalabase.la @PC_PNG_LIBS@ @LIBM@
 Cflags: -I${includedir}
