--- a/daalaenc.pc.in
+++ b/daalaenc.pc.in
@@ -6,8 +6,8 @@ includedir=@includedir@
 Name: daalaenc
 Description: Daala encoding library
 Version: @PACKAGE_VERSION@
-Requires.private: ogg >= 1.3 @PC_PNG_REQUIRES@
+Requires.private: @PC_PNG_REQUIRES@
 Conflicts:
 Libs: -L${libdir} -ldaalaenc
-Libs.private: -ldaalabase @OGG_LIBS@ @PC_PNG_LIBS@ @LIBM@
+Libs.private: -ldaalabase @PC_PNG_LIBS@ @LIBM@
 Cflags: -I${includedir}/daala
