Adds SIMD code for deringing filter.

--- a/Makefile.am
+++ b/Makefile.am
@@ -101,6 +101,7 @@ src_libdaalabase_la_SOURCES = \
 if ENABLE_X86ASM
 src_libdaalabase_la_SOURCES += \
 	src/x86/sse2mc.c \
+	src/x86/x86filter.c \
 	src/x86/x86state.c
 endif
 
@@ -332,6 +333,7 @@ tools_upsample_SOURCES = \
 if ENABLE_X86ASM
 tools_upsample_SOURCES += \
 	src/x86/sse2mc.c \
+	src/x86/x86filter.c \
 	src/x86/x86state.c
 endif
 tools_upsample_CFLAGS = $(THEORA_CFLAGS) $(OGG_CFLAGS) $(PNG_CFLAGS)
