--- a/Makefile.am
+++ b/Makefile.am
@@ -101,7 +101,7 @@ src_libdaalabase_la_SOURCES = \
 if ENABLE_X86ASM
 src_libdaalabase_la_SOURCES += \
 	src/x86/sse2mc.c \
-	src/x86/x86filter.c \
+	src/x86/sse2filter.c \
 	src/x86/x86state.c
 endif
 
