Always add daalabase to libraries from pkgconfig

--- a/daaladec.pc.in
+++ b/daaladec.pc.in
@@ -8,6 +8,6 @@ Description: Daala decoding library
 Version: @PACKAGE_VERSION@
 Requires.private: @PC_PNG_REQUIRES@
 Conflicts:
-Libs: -L${libdir} -ldaaladec
-Libs.private: -ldaalabase @PC_PNG_LIBS@ @LIBM@
+Libs: -L${libdir} -ldaaladec -ldaalabase
+Libs.private: @PC_PNG_LIBS@ @LIBM@
 Cflags: -I${includedir}/daala
