Add satd intrinsics for 4x4 and 8x8.
Old -
time ./encoder_example -v 20 --mc-use-satd -o perf.ogv
BasketballPass_416x240_50_1s.y4m
0:00:01.00 video: 440kbps - Frame 50 - 0.70 FPS - 42.10 FPM
real    1m11.657s
user    1m11.210s
sys     0m0.063s

New -
time ./encoder_example -v 20 --mc-use-satd -o perf.ogv
BasketballPass_416x240_50_1s.y4m
0:00:01.00 video: 440kbps - Frame 50 - 0.76 FPS - 45.55 FPM
real    1m6.227s
user    1m5.870s
sys     0m0.044s

--- a/Makefile.am
+++ b/Makefile.am
@@ -134,6 +134,11 @@ if ENABLE_X86ASM
 src_libdaalaenc_la_SOURCES += \
         src/x86/x86enc.c \
         src/x86/x86mcenc.c
+if ENABLE_SSE2_INTRINSICS
+src_libdaalaenc_la_SOURCES += \
+        src/x86/sse2mcenc.c
+%sse2mcenc.o %sse2mcenc.lo: CFLAGS += -msse2
+endif
 endif
 
 # Example programs
