--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -272,6 +272,17 @@ CHBASIS_OBJS:=${CHBASIS_OBJS:%.c=${WORKDIR}/%.o}
 CHBASIS_CSOURCES:=${CHBASIS_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} ${CHBASIS_LIB_CSOURCES:%=${LIBSRCDIR}/%}
 CHBASIS_TARGET:=compute_haar_basis
 
+#cos_search
+COS_SEARCH_LOCAL_CSOURCES = \
+cos_search.c
+
+COS_SEARCH_LDFLAGS = -lm
+
+COS_SEARCH_OBJS:=${COS_SEARCH_LOCAL_CSOURCES}
+COS_SEARCH_OBJS:=${COS_SEARCH_OBJS:%.c=${WORKDIR}/%.o}
+COS_SEARCH_CSOURCES:=${COS_SEARCH_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%}
+COS_SEARCH_TARGET:=cos_search
+
 #trans2d
 T2D_LOCAL_CSOURCES = \
 trans2d.c \
@@ -393,9 +404,9 @@ DZZ_TARGET:=draw_zigzags
 
 ALL_OBJS:=${P2Y_OBJS} ${Y2P_OBJS} ${PSNR_OBJS} ${PSNRHVS_OBJS} \
  ${GEN_CDF_OBJS} ${GEN_LAPLACE_TABLES_OBJS} ${T_OBJS} \
- ${TG_OBJS} ${CBASIS_OBJS} ${CHBASIS_OBJS} ${T2D_OBJS} ${BSIZE_OBJS} \
- ${BD_OBJS} ${YJ_OBJS} ${JY_OBJS} ${DZZ_OBJS} ${MONO_OBJS} ${DS_OBJS} \
- ${US_OBJS}
+ ${TG_OBJS} ${CBASIS_OBJS} ${CHBASIS_OBJS} ${COS_SEARCH_OBJS} ${T2D_OBJS} \
+ ${BSIZE_OBJS} ${BD_OBJS} ${YJ_OBJS} ${JY_OBJS} ${DZZ_OBJS} ${MONO_OBJS} \
+ ${DS_OBJS} ${US_OBJS}
 
 ALL_ASMS:=${ALL_OBJS:%.o=%.s}
 
@@ -403,9 +414,9 @@ ALL_DEPS:=${ALL_OBJS:%.o=%.d}
 
 ALL_TARGETS:=${P2Y_TARGET} ${Y2P_TARGET} ${PSNR_TARGET} ${PSNRHVS_TARGET} \
  ${GEN_CDF_TARGET} ${GEN_LAPLACE_TABLES_TARGET} ${T_TARGET} \
- ${TG_TARGET} ${CBASIS_TARGET} ${CHBASIS_TARGET} ${T2D_TARGET} \
- ${BSIZE_TARGET} ${BD_TARGET} ${YJ_TARGET} ${JY_TARGET} ${DZZ_TARGET} \
- ${MONO_TARGET} ${DS_TARGET} ${US_TARGET}
+ ${TG_TARGET} ${CBASIS_TARGET} ${CHBASIS_TARGET} ${COS_SEARCH_TARGET} \
+ ${T2D_TARGET} ${BSIZE_TARGET} ${BD_TARGET} ${YJ_TARGET} ${JY_TARGET} \
+ ${DZZ_TARGET} ${MONO_TARGET} ${DS_TARGET} ${US_TARGET}
 
 all: ${ALL_TARGETS}
 
@@ -444,6 +455,9 @@ ${CBASIS_TARGET}: ${CBASIS_OBJS}
 
 ${CHBASIS_TARGET}: ${CHBASIS_OBJS}
 	${CC} ${CFLAGS} ${CHBASIS_OBJS} ${CHBASIS_LDFLAGS} -o $@
+
+${COS_SEARCH_TARGET}: ${COS_SEARCH_OBJS}
+	${CC} ${CFLAGS} ${COS_SEARCH_OBJS} ${COS_SEARCH_LDFLAGS} -o $@
 
 ${T2D_TARGET}: ${T2D_OBJS}
 	${CC} ${CFLAGS} ${T2D_OBJS} ${T2D_LDFLAGS} -o $@
