pvq: add --enable-float-pvq option to configure
This will allow us to revert to earlier, pre-fixed point behaviour for
debugging/comparison purposes.

When enabled, there is a slight change in metrics between this and the
original PVQ float code (e.g. 0ed89290fc6627520187f0378831e7f14cc6719c) on
some clips (see comment before od_pvq_compute_gain() invocation):
ntt-short1:
          LOW (%)  MEDIUM (%) HIGH (%)
    PSNR -0.024708  0.008433  0.001629
 PSNRHVS -0.028322  0.005017  0.013243
    SSIM -0.024769 -0.013816 -0.009093
FASTSSIM -0.048246 -0.064317  0.018761

but no change on subset1. The above metrics are with reverts of all other
(non-PVQ) metrics changing patches since 0ed89, namely:

9fe5435 Fixes uninitialized curr_coding_order from f7499812617
f749981 Add closed-form frame determination code along with verification
b3885ab Alter golden frame spacing calculation
685b54c Alter od_quantizer_to_codedquantizer to find closet match
5c0b0d0 Fix overflow when coding more than 536870912 bits.
91a60fd Fix some additional overflows in the 64x64 DCT.

Actual metrics change (with --enable-float-pvq) between the parent and this
patch, i.e. the current fixed-point PVQ code and the restored float PVQ code:
subset1:
          LOW (%)  MEDIUM (%) HIGH (%)
    PSNR -0.015591 0.010948  0.001300
 PSNRHVS  0.026496 0.048591  0.009870
    SSIM -0.012691 0.023220  0.013913
FASTSSIM  0.104007 0.027649 -0.187406

ntt-short1:
          LOW (%)  MEDIUM (%) HIGH (%)
    PSNR -0.006558  0.036382 -0.014382
 PSNRHVS  0.062005  0.040058 -0.042301
    SSIM  0.039120 -0.004784 -0.021224
FASTSSIM  0.057295  0.030152  0.130065

Finally, no change in metrics when disabled (the default).

--- a/configure.ac
+++ b/configure.ac
@@ -258,6 +258,14 @@ AS_IF([test "$enable_encoder_check" = "yes"], [
 ])
 AM_CONDITIONAL([ENCODER_CHECK], [test "$enable_encoder_check" = "yes"])
 
+AC_ARG_ENABLE([float-pvq],
+  AS_HELP_STRING([--enable-float-pvq], [Enable double precision PVQ]),,
+  [enable_float_pvq=no])
+
+AS_IF([test "$enable_float_pvq" = "yes"], [
+  AC_DEFINE([OD_FLOAT_PVQ], [1], [Enable double precision PVQ])
+])
+
 AC_ARG_ENABLE([dct-check-overflow],
   AS_HELP_STRING([--enable-dct-check-overflow], [Check for DCT overflow]),,
   [enable_dct_check_overflow=no])
@@ -380,6 +388,7 @@ AC_MSG_NOTICE([
     MC Animation  ................ ${enable_mc_animate}
     Reconstructed video dumping .. ${enable_dump_recons}
     Check encoder ................ ${enable_encoder_check}
+    Float PVQ .................... ${enable_float_pvq}
     Check DCT overflow............ ${enable_dct_check_overflow}
     Check assembly................ ${enable_check_asm}
     Bit accounting ............... ${enable_accounting}
