Add API hooks for rate control
As of now, the hooks do not function.  This is simply staking out the constants
and basic calls.

--- a/Makefile.am
+++ b/Makefile.am
@@ -128,7 +128,8 @@ src_libdaalaenc_la_SOURCES = \
 	src/infoenc.c \
 	src/laplace_encoder.c \
 	src/mcenc.c \
-	src/pvq_encoder.c
+	src/pvq_encoder.c \
+	src/rate.c
 if ENABLE_X86ASM
 src_libdaalaenc_la_SOURCES += \
         src/x86/x86enc.c \
