Add rate.c to unix/Makefile
This got missed when adding rate.c to the larger codeabse

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -197,6 +197,7 @@ infoenc.c \
 laplace_encoder.c \
 mcenc.c \
 pvq_encoder.c \
+rate.c \
 $(if $(findstring -DOD_X86ASM,${CFLAGS}), \
 x86/sse2mcenc.c \
 x86/x86enc.c \
