pvq: use small LUT for integer sqrt((n+3)/2) sqrt((n+2)/2)
objective1-fast:
PSNR YCbCr:     -0.11%      0.06%     -0.04%
   PSNRHVS:     -0.04%
      SSIM:     -0.05%
    MSSSIM:     -0.07%
 CIEDE2000:      0.03%

subset1:
PSNR YCbCr:     -0.11%      0.06%     -0.04%
   PSNRHVS:     -0.04%
      SSIM:     -0.05%
    MSSSIM:     -0.07%
 CIEDE2000:      0.03%

--- a/Makefile.am
+++ b/Makefile.am
@@ -209,6 +209,7 @@ tools_TARGETS = \
 	tools/trans2d \
 	tools/trans_gain \
 	tools/gen_cdf \
+	tools/gen_sqrt_tbl \
 	tools/compute_basis \
 	tools/compute_haar_basis \
 	tools/cos_search \
@@ -420,6 +421,11 @@ tools_gen_cdf_SOURCES = \
 	tools/gen_cdf.c
 tools_gen_cdf_CFLAGS = $(OGG_CFLAGS) $(PNG_CFLAGS)
 tools_gen_cdf_LDADD = $(OGG_LIBS) $(PNG_LIBS) $(LIBM)
+
+# gen_sqrt_tbl
+tools_gen_sqrt_tbl_SOURCES = \
+	tools/gen_sqrt_tbl.c
+tools_gen_sqrt_tbl_LDADD = $(LIBM)
 
 # compute_basis
 tools_compute_basis_SOURCES = \
