--- a/tools/unix/Makefile
+++ b/tools/unix/Makefile
@@ -319,6 +319,20 @@ GEN_CDF_CSOURCES:=${GEN_CDF_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} \
  ${GEN_CDF_LIB_CSOURCES:%=${LIBSRCDIR}/%}
 GEN_CDF_TARGET:=gen_cdf
 
+#gen_sqrt_tbl
+GEN_SQRT_TBL_LOCAL_CSOURCES = \
+gen_sqrt_tbl.c
+
+GEN_SQRT_TBL_LIB_CSOURCES =
+
+GEN_SQRT_TBL_LDFLAGS = -lm
+
+GEN_SQRT_TBL_OBJS:=${GEN_SQRT_TBL_LOCAL_CSOURCES} ${GEN_SQRT_TBL_LIB_CSOURCES}
+GEN_SQRT_TBL_OBJS:=${GEN_SQRT_TBL_OBJS:%.c=${WORKDIR}/%.o}
+GEN_SQRT_TBL_CSOURCES:=${GEN_SQRT_TBL_LOCAL_CSOURCES:%=${LOCALSRCDIR}/%} \
+ ${GEN_SQRT_TBL_LIB_CSOURCES:%=${LIBSRCDIR}/%}
+GEN_SQRT_TBL_TARGET:=gen_sqrt_tbl
+
 #gen_laplace_tables
 GEN_LAPLACE_TABLES_LOCAL_CSOURCES = \
 gen_laplace_tables.c
