--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: c
+addons:
+  apt:
+    packages:
+      - libogg-dev
+      - libjpeg-dev
+      - libpng-dev
+      - libsdl2-gfx-dev
+      - check
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install autoconf automake libtool libogg libpng libjpeg check sdl2; fi
@@ -10,4 +18,3 @@ compiler:
   - clang
 script:
   - ./autogen.sh && ./configure && make && make tools
- 
