--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install autoconf automake libtool libogg libpng libjpeg check sdl2; fi
+dist: trusty
 os:
   - linux
   - osx
