--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
       - check
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade coreutils libpng; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install autoconf automake libtool libogg libpng libjpeg check sdl2; fi
 dist: trusty
 os:
